--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <div class="box">
                             <i class='fa fa-graduation-cap'></i>
                             <div class="text">School Education</div>
-                            <p>Name: New Model English <br> Medium School Kolhapur<br>
+                            <p id= "school">Name: New Model English <br> Medium School Kolhapur<br>
                                Percentage: 76%<br>
                                Completion Year: 2016
                             </p>
@@ -200,6 +200,7 @@
             </div>
         </section>
 
+        
         <!--Project Section-->
         <section class="project" id="project">
             <div class="max-width">
@@ -225,7 +226,7 @@
 
                     <div class="card">
                         <div class="box">
-                            <img src="project4.jpg" alt="project3">
+                            <img src="project3.jpg" alt="project3">
                             <p>Typing Tutor for visually Impaired People<br>
                                Completion Year: 2020<br>
                                Degree 2nd Year Project</p>
@@ -264,6 +265,14 @@
                                 <div class="info">
                                     <div class="head">E-mail</div>
                                     <div class="sub-title">yashvshinde16@gmail.com</div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <i class="fa fa-phone"></i>
+                                <div class="info">
+                                    <div class="head">Phone</div>
+                                    <div class="sub-title">7066374422</div>
                                 </div>
                             </div>
                         </div>
