--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <div class="box">
                             <i class='fa fa-graduation-cap'></i>
                             <div class="text">School Education</div>
-                            <p id= "school">Name: New Model English <br> Medium School Kolhapur<br>
+                            <p id= "school">Name: New Model English Medium School Kolhapur<br>
                                Percentage: 76%<br>
                                Completion Year: 2016
                             </p>
@@ -129,7 +129,7 @@
                         <br>
                         <div class="text">Work Experiance</div>
                         <p>I worked as an intern in Satej Infotech Private Limited. Satej Infotech is basically an Digital Marketing company and they also design webpages. I helped them design some webpages using PHP scripting language. It was 3 months internship.</p>
-                        <a href="#">Conpany info</a>
+                        <a href="#">Company info</a>
                     </div>
                     <div class="column right">
                         <div class="bars">
