--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
                     <div class="text1">Hello, My name is</div>
                     <div class="text2">Yash Shinde</div>
                     <div class="text3">And I'am a <span>CSE Student</span></div>
+                    <div class = "icons">
+                        <a href="https://www.linkedin.com/in/yash-shinde-134293148/"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://github.com/yashvshinde"><i class="fab fa-github"></i></a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -276,7 +280,16 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                        <div class="text" id= "text">Social Media Handles</div>
+                        <div class="row">
+                            <a href="https://www.linkedin.com/in/yash-shinde-134293148/"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://github.com/yashvshinde"><i class="fab fa-github"></i></a>
+                            <a href="https://www.facebook.com/profile.php?id=100012978228747"><i class="fab fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/yashvshinde/"><i class="fab fa-instagram"></i></a>
+                            <a href="https://twitter.com/Yash09709190"><i class="fab fa-twitter"></i></a>
+                        </div>
+                     </div>
+                    
 
                     <div class="column right">
                         <div class="text">Message me</div>
