--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
                         <div class="bars">
                             <div class="info">
-                                <span>PHP</span>
+                                <span>React js</span>
                                 <span>75%</span>
                             </div>
                             <div class="line php"></div>
